# rust-multi-prj

./: .gitignore  Cargo.toml  axum.md
_doc/: axum.md
backend/: Cargo.toml
backend/src/: main.rs  product_controller.rs
data-ea/: Cargo.toml
data-ea/_doc/: README.md
data-ea/data/: Customers.csv  GitHubRepository.txt  SalesData2022.csv  sales_order_report2.csv
data-ea/src/: main.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: form.rs  main.rs  products.rs  router.rs
invaders/: Cargo.toml  build.rs
invaders/src/: main.rs
product/: .env  Cargo.toml
product/src/: home_controller.rs  main.rs  product_controller.rs
system-monitoring/: Cargo.toml  README.md
system-monitoring/src/: main.rs
tutor/: Cargo.toml
tutor/bend/: Cargo.toml
tutor/bend/src/: readme.md
tutor/bend/src/db/: course_db.rs  mod.rs
tutor/bend/src/exceptions/: app_error.rs  error_response.rs
tutor/bend/src/handlers/: course_handler.rs  health_handler.rs  mod.rs
tutor/bend/src/models/: course.rs
tutor/bend/src/routes/: course_route.rs  health_route.rs  mod.rs
tutor/bend/src/scripts/: course.sql  tutor.sql
tutor/bend/src/states/: appstate.rs
tutor/fend/: Cargo.toml
tutor/fend/static/: index.html  styles.css
tutor/fend/static/auth/: login.html
