[package]
name = "product"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

axum = "0.7.5"

# 개발용
cargo-watch = "8.5.2"

# cors
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }

# database
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "json", "postgres", "macros"]}

# json
serde = "1.0.197"
serde_json = "1.0.115"