[package]
name = "system-monitoring"
version = "0.1.0"
edition = "2021"

[profile.dev]
lto = false

[profile.release]
#lto = false
strip = "debuginfo"
lto = true
codegen-units = 1

[target.x86_64-pc-windows-msvc]
linker = "rust-lld"

[dependencies]
dotenv = "0.15"
sysinfo = "0.29"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

lettre = { version = "0.10", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls"] }
#lettre = { version = "0.10", default-features = false, features = ["smtp-transport", "rustls-tls"] }
ureq = { version = "2.5", default-features = false, features = ["tls"] }
hostname = "0.4.1"
reqwest = { version = "0.12.22", features = ["json"] }




