[package]
name = "fend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix web core library
actix-web = "4.2.1"
#awc = { version = "3.0.1", features = [ "openssl" ] }

# Actix crate for serving static pages
actix-files="0.6.2"

# Templating library
tera = "1.17.0"

# Serialization and deserialization
serde = { version = "1.0.144", features = ["derive"] }
serde_json= "1.0.85"

[dev-dependencies]
# For automated tests
actix-rt = "2.7.0"